fix(nop-lint): audit 缺陷修复——stopBy=rule 懒解析（前向引用回归测试）+ 套件计数门禁 + Verification 如实重写